# work_timer

./: Cargo.toml  README.md  SPEC.md
src/: config.rs  database.rs  idle.rs  logging.rs  main.rs  notifications.rs  state.rs  timer.rs  tray.rs
